Redirect to client but showing error Token not found in TokenValidationParameter

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,9 +3,9 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AuthServerDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
-    "Issuer": "https://joydipkanjilal.com/",
-    "Audience": "https://joydipkanjilal.com/",
-    "SecretKey": "KNryP/Y55T41k6hV5AZF9jjymKSZf3wg707BtJ7IPRo="
+    "Issuer": "https://localhost:7098/",
+    "Audience": "https://localhost:7098/",
+    "SecretKey": "907A6D3546002CE8744DC03DC455A556"
   },
   "Logging": {
     "LogLevel": {
