--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,10 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
-      "Microsoft.AspNetCore": "Information",
-      "Microsoft.AspNetCore.StaticAssets": "Warning",
-      "Microsoft.AspNetCore.Hosting.Diagnostics": "Warning"
+      "Default": "Debug"
+      //"Microsoft.AspNetCore": "Information",
+      //"Microsoft.AspNetCore.StaticAssets": "Warning",
+      //"Microsoft.AspNetCore.Hosting.Diagnostics": "Warning"
     }
   }
 }
