Fix Url Login-callback Set hmacsh265 security

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,10 +1,18 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AuthServerDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Jwt": {
+    "Issuer": "https://localhost:7098/",
+    "Audience": "https://localhost:7098/",
+    "SecretKey": "YourSuperLongSecureSecretKeyHere"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug"
-      //"Microsoft.AspNetCore": "Information",
-      //"Microsoft.AspNetCore.StaticAssets": "Warning",
-      //"Microsoft.AspNetCore.Hosting.Diagnostics": "Warning"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Debug",
+      "Microsoft.AspNetCore.StaticAssets": "Warning",
+      "Microsoft.AspNetCore.Hosting.Diagnostics": "Warning"
     }
   }
 }
