--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -9,10 +9,8 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Debug",
-      "Microsoft.AspNetCore.StaticAssets": "Warning",
-      "Microsoft.AspNetCore.Hosting.Diagnostics": "Warning"
+      "Default": "Debug",
+      "Microsoft.EntityFrameworkCore.Database": "Warning"
     }
   }
 }
