Refacture code Authorize API Works Authenticated user not showing

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -3,8 +3,8 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AuthServerDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
-    "Issuer": "https://localhost:7098/",
-    "Audience": "https://localhost:7098/",
+    "Issuer": "https://localhost:7098",
+    "Audience": "https://localhost:7098/resources",
     "SecretKey": "YourSuperLongSecureSecretKeyHere"
   },
   "Logging": {
